# Snort-ModSec-Preproc

./: LICENSE  Makefile  Makefile.am  Makefile.in  README.md  haha.sh  hi_main.cc  modified-rule.conf  parser.py  rule.conf  sf_preproc_info.h  spp_modsecurity.c  spp_modsecurity.h  xssrule.conf
